--- a/Parallax/css/styles.css
+++ b/Parallax/css/styles.css
@@ -81,12 +81,15 @@ body, html{
 
 #step1, #step2, #step3, #step4, #step5, #step6,#step7{
     background-color: rgb(75, 150, 185);
-    height: 120px;
+    height: 130px;
     width: 100%;
     margin: 5px;
+    border-radius: 50px;
+    border: 2px solid;
+    box-shadow: 0 8px 6px -6px black;
 }
 #step1 h1, #step2 h1, #step3 h1, #step4 h1, #step5 h1, #step6 h1, #step7 h1{
-    font-size: 0.9em;
+    font-size: 0.8em;
     margin-top: 0;
     text-align: center;
     margin: 0px 5px;
